@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
-   String designation
}

class Pharmacy{
-int id
-String name
-Address address
}

class Park{
-int id
-int maxSlotsNumber
}

class ParkingSlot{
-int id
-int maxSlotsNumber
}

class ChargingSlot{
-int id
-int maxSlotsNumber
}

class Courier {
      -String id
      -String name
      -String nif
      -String iban
}

Platform "1" -- "*" Courier : has registered >
Courier "1" -- "*" Pharmacy : is associated to >
Pharmacy "1" -- "1" Park : has >
Park "1" -- "1" ParkingSlot : has >
Park "1" -- "1" ChargingSlot : has >
@enduml